# PR1_6_OOP

./: CMakeLists.txt  Source.cpp
classes/: RightAngle.cpp  RightAngle.h
tests/: tests.cpp
